@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: February 14, 2011</p>
+      <p>Last Updated: February 15, 2011</p>
     </td>
   </tr>
 </table>
@@ -2036,6 +2036,8 @@ nuttx-5.18 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  shorter and more general.
     * The NuttX repository has been converted to SVN and can now be found here
       http://nuttx.svn.sourceforge.net/viewvc/nuttx/
+	* configs/mbed/hidkbd -- Added USB host support for the mbed LPC1768 board; add
+ 	  a USB host HID keyboard configuraion.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
